tests/derive_ui/external_subcommand_misuse.stderr
error: `external_subcommand` cannot be used with `arg`
 --> tests/derive_ui/external_subcommand_misuse.rs:5:12
  |
5 |     #[clap(external_subcommand)]
  |            ^^^^^^^^^^^^^^^^^^^
